name:                tansu
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gettylefou@gmail.com
-- copyright:
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Database.Tansu,
                       Database.Tansu.Internal,
                       Database.Tansu.Backend.Filesystem,
                       Database.Tansu.Backend.Ephemeral
  build-depends:       base >=4.8 && <4.9,
                       bytestring,
                       cereal,
                       monadLib,
                       directory,
                       filepath,
                       base64-bytestring,
                       containers
  default-language:    Haskell2010
